--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     </p>
   </div>
 
+  <script src="js/jquery.js"></script>
   <script src="js/animframe_polyfill.js"></script>
   <script src="js/keyboard_input_manager.js"></script>
   <script src="js/html_actuator.js"></script>
