Build restyling structure
-Build custom.less with vars and mixins
-Set coloring for each tile
-Set game container color

Recoloring is now available by changing value of @basecolor in custom.less

--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
+  <link href="style/custom.less" rel="stylesheet/less" type="text/css">
+  <script>
+  less = {
+    env: "development",
+    async: false,
+    fileAsync: false,
+    poll: 1000,
+    functions: {},
+    dumpLineNumbers: "comments",
+    relativeUrls: false,
+    rootpath: ":/a.com/"
+  };
+</script>
+<script src="js/less.js"></script>
+<script src="js/prefixfree.js"></script>
 </head>
 <body>
   <div class="container">
