--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>32</title>
-
-  <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
-
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
   <link href="style/custom.less" rel="stylesheet/less" type="text/css">
+    <style type="text/less">
+  @basecolor:#000000;
+  </style>
   <script>
   less = {
     env: "development",
@@ -22,7 +22,7 @@
     functions: {},
     dumpLineNumbers: "comments",
     relativeUrls: false,
-    rootpath: ":/a.com/"
+    rootpath: ""
   };
 </script>
 <script src="js/less.js"></script>
