Update misc stylings

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <div class="game-message">
         <p class="message"></p>
         <div class="lower">
-	        <a class="keep-playing-button">Keep going</a>
-          <a class="retry-button">Try again</a>
+	        <a class="keep-playing-button pure-button pure-button-primary">Játssz tovább</a>
+          <a class="retry-button pure-button pure-button-primary">Próbáld újra</a>
         </div>
       </div>
 
