Started styling header and page text

--- a/index.html
+++ b/index.html
@@ -28,13 +28,17 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">32</h1>
+      <h1 class="title">Lockville <small>1024</small></h1>
+      <p class="game-intro">
+        Add össze a számokat, hogy eljuss <br class="visible-xs"/><strong>1024-ig!</strong><br/>
+        Ha sikerül, egy <strong>ingyenes</strong> Lockville ajándék kupon a jutalmad!
+      </p>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro">Join the numbers and get to the <strong>32 tile!</strong></p>
+    
 
     <div class="game-container">
       <div class="game-message">
