Win message styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="game-container">
       <div class="game-message">
-        <p class="message"></p>
+        <div class="message"></div>
         <div class="lower">
 	        <a class="keep-playing-button pure-button pure-button-primary">Játssz tovább</a>
           <a class="retry-button pure-button pure-button-primary">Próbáld újra</a>
