Finalized text styling
Also added some text in markup

--- a/index.html
+++ b/index.html
@@ -82,15 +82,18 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
+      <strong class="important">Így játssz:</strong> Használd a <strong>nyíl billentyűket</strong> a téglák mozgatásához. Amikor két egyforma értékű tégla összeér, egybeolvadnak, az értékük pedig <strong>összeadódik!</strong>
     </p>
     <hr>
-    <p>
-    <strong class="important">Note:</strong> This site is the official version of 2048. You can play it on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
+    <p class="info">
+    <strong class="important">Megjegyzés:</strong> A nyeremény kupon a Lockville Kiszabadulós Kalandjáték pályájára érvényes. Egy csoportban egy kupon használható fel. Mielőtt megadod az e-mail címed, olvasd el az <a href="http://lockville.hu/hu/adatkezeles.html" target="_blank" title="Adatkezelési nyilatkozat">adatkezelési nyilatkozatunkat</a>!
+    </p>
+    <p class="info">
+      A játék alapjául Gabriele Cirulli 2048 nevű játéka szolgált. Nézd meg az eredeti játékot a <a href="http://hit.io/2048" target="_blank">git.io/2048</a> oldalon.
     </p>
     <hr>
-    <p>
-    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    <p class="info2">
+    <a href="http://lockville.hu" target="_blank">www.lockville.hu</a>
     </p>
   </div>
 
