--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </p>
     <hr>
     <div class="share">
-    <p><strong class="important">Osszd meg barátaiddal!</strong></p>
+    <p><strong class="important">Oszd meg barátaiddal!</strong></p>
     <div class="fb-share-button" data-href="https://lockville.hu/1024" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://lockville.hu/1024" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024"></div>
     </div>
 
