--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <meta property="og:title" content="Lockville 1024 nyereményjáték" />
   <meta property="og:image" content="ogimg.jpg" />
   <meta property="og:description" content="Juss el 1024-ig és jutalmad egy Lockville ajándék kupon!" />
+  <link href="style/styles.css" rel="stylesheet" type="text/css">
+  <!-- LESS stylesheet
   <link href="style/custom.less" rel="stylesheet/less" type="text/css">
   <script>
   less = {
@@ -25,8 +27,7 @@
     rootpath: ""
   };
 </script>
-<script src="js/less.js"></script>
-<script src="js/prefixfree.js"></script>
+<script src="js/less.js"></script> -->
 </head>
 <body>
   <div class="container">
