Started building win social sharing

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         <div class="lower">
 	        <a class="keep-playing-button pure-button pure-button-primary">Játssz tovább</a>
           <a class="retry-button pure-button pure-button-primary">Próbáld újra</a>
+          <a class="pure-button dropdown">Oszd meg</a>
+          <div class="winsocial">
+            <div class="fb-share-button" data-href="https://lockville.hu/1024" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://lockville.hu/1024" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024"></div>
+          </div>
         </div>
       </div>
 
