--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:image" content="ogimg.jpg" />
   <meta property="og:description" content="Juss el 1024-ig és jutalmad egy Lockville ajándék kupon!" />
   <link href="style/styles.css" rel="stylesheet" type="text/css">
-  <!-- LESS stylesheet
+  <!-- LESS stylesheet 
   <link href="style/custom.less" rel="stylesheet/less" type="text/css">
   <script>
   less = {
@@ -47,12 +47,14 @@
     <div class="game-container">
       <div class="game-message">
         <div class="message"></div>
-        <div class="lower">
-	        <a class="keep-playing-button pure-button pure-button-primary">Játssz tovább</a>
-          <a class="retry-button pure-button pure-button-primary">Próbáld újra</a>
-          <a class="pure-button dropdown">Oszd meg</a>
+        <div><a class="pure-button dropdown">Meséld el barátaidnak!</a></div>
+        <div class="hack">
           <div class="winsocial">
             <div class="fb-share-button" data-href="https://lockville.hu/1024" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://lockville.hu/1024" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024"></div>
+          </div>
+          <div class="lower">
+            <a class="keep-playing-button pure-button pure-button-primary">Játssz tovább</a>
+            <a class="retry-button pure-button pure-button-primary">Próbáld újra</a>
           </div>
         </div>
       </div>
