Fixed og:image links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
   <meta property="og:title" content="Lockville 1024 nyereményjáték" />
-  <meta property="og:image" content="ogimg.jpg" />
+  <meta property="og:image" content="http://lockville.hu/1024/ogimg.jpg" />
   <meta property="og:description" content="Juss el 1024-ig és jutalmad egy Lockville ajándék kupon!" />
   <link href="style/styles.css" rel="stylesheet" type="text/css">
   <!-- LESS stylesheet 
