--- a/iwin.html
+++ b/iwin.html
@@ -5,7 +5,7 @@
   <title>Lockville 1024</title>
   <link rel="shortcut icon" href="favicon.ico">
   <meta property="og:title" content="Nyertem egy ajándékkupont a Lockville kiszabadulós kalandjátékra!" />
-  <meta property="og:image" content="1024.png" />
+  <meta property="og:image" content="http://lockville.hu/1024/1024.png" />
   <meta property="og:description" content="Kattints, hogy te is nyerhess!" />
   <meta http-equiv="refresh" content="1;url=index.html">
 </head>
