Fixed og:title and og:description

--- a/iwin.html
+++ b/iwin.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>Lockville 1024</title>
   <link rel="shortcut icon" href="favicon.ico">
-  <meta property="og:title" content="Nyertem egy ajándékkupont a Lockville kiszabadulós kalandjátékra!" />
+  <meta property="og:title" content="Kiszabadulós játék kupont nyertem!" />
   <meta property="og:image" content="http://lockville.hu/1024/1024.png" />
-  <meta property="og:description" content="Kattints, hogy te is nyerhess!" />
+  <meta property="og:description" content="Játssz a Lockville játékával és nyerj Te is!" />
   <meta http-equiv="refresh" content="1;url=index.html">
 </head>
 <body>
