Build markup for email template

--- a/email.html
+++ b/email.html
@@ -21,20 +21,21 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">Lockville <small>1024</small></h1>
-      <h2>Hurrá, sikerült!</h2>
-      <p class="game-intro">
-       Ha minden jól megy, a megnyert kuponod már az e-mail fiókodban vár rád. Gyorsan nézd meg, ott van-e már!
+      <img src="http://lockville.hu/res/seal_small.png" alt="Lockville"/>
+      <h1 class="title">Lockville nyeremény kupon</h1>
+      <h2 class="title">A kupon sorszáma: 00000000</h2>
+      <p>
+       Ez a kupon <strong>ingyenes</strong> részvételt biztosít <strong>1 fő</strong> részére a Lockville Kiszabadulós Kalandjátékban.
       </p>
     </div>
     
-    <hr>
+    <hr/>
     <p class="info">
-    <strong class="important">Megjegyzés:</strong> A nyeremény kupon a Lockville Kiszabadulós Kalandjáték pályájára érvényes. Egy csoportban egy kupon használható fel. <br/>Ha valamiért nem kaptad volna meg a kupont, feltétlenül írj nekünk az <a href="mailto:info@lockville.hu" target="_blank">info@lockville.hu</a>-ra, megoldjuk a problémát.</a>
+      <strong class="important">Megjegyzés:</strong> A nyeremény kupon a Lockville Kiszabadulós Kalandjáték pályájára érvényes. Egy csoportban egy kupon használható fel. Ez a kupon átruházható, de készpénzre nem váltható. Ez a kupon <strong>2014. május 15-ig</strong> használható fel.
     </p>
-    <hr>
+    <hr/>
     <p class="info2">
-    <a href="http://lockville.hu" target="_blank">www.lockville.hu</a>
+      További információk, nyitvatartás és elérhetőségek: <br/><a href="http://lockville.hu" target="_blank">www.lockville.hu</a>
     </p>
   </div>
 </body>
