Set up email sending

--- a/email.html
+++ b/email.html
@@ -3,39 +3,24 @@
 <head>
   <meta charset="utf-8">
   <title>Lockville nyeremény kupon</title>
-  <link href="style/email.less" rel="stylesheet/less" type="text/css">
-  <script>
-  less = {
-    env: "development",
-    async: false,
-    fileAsync: false,
-    poll: 1000,
-    functions: {},
-    dumpLineNumbers: "comments",
-    relativeUrls: false,
-    rootpath: ""
-  };
-</script>
-<script src="js/less.js"></script>
 </head>
 <body>
-  <div class="container">
-    <div class="heading">
-      <img src="http://lockville.hu/res/seal_small.png" alt="Lockville"/>
-      <h1 class="title">Lockville nyeremény kupon</h1>
-      <h2 class="title">A kupon sorszáma: 00000000</h2>
+  <div style="display: block; width: 80%; margin: auto; padding: 2%; padding-top: 0.5%; background-color: rgba(241, 196, 15, 0.15); border: 4px solid #c0392b; text-align: center; color: #43140f; font-family: sans-serif;">
+      <img src="http://lockville.hu/res/seal_small.png" alt="Lockville" style="display: block; margin: auto;" />
+      <h1 style="margin-top:0.3em">Lockville nyeremény kupon</h1>
+      <h2>A kupon sorszáma: $rand</h2>
       <p>
        Ez a kupon <strong>ingyenes</strong> részvételt biztosít <strong>1 fő</strong> részére a Lockville Kiszabadulós Kalandjátékban.
       </p>
-    </div>
+    
     
     <hr/>
-    <p class="info">
+    <p style="font-size: 0.75em; text-align: justify;">
       <strong class="important">Megjegyzés:</strong> A nyeremény kupon a Lockville Kiszabadulós Kalandjáték pályájára érvényes. Egy csoportban egy kupon használható fel. Ez a kupon átruházható, de készpénzre nem váltható. Ez a kupon <strong>2014. május 15-ig</strong> használható fel.
     </p>
     <hr/>
-    <p class="info2">
-      További információk, nyitvatartás és elérhetőségek: <br/><a href="http://lockville.hu" target="_blank">www.lockville.hu</a>
+    <p>
+      További információk, nyitvatartás és elérhetőségek: <br/><a href="http://lockville.hu" target="_blank" style="color: #d14233;">www.lockville.hu</a>
     </p>
   </div>
 </body>
