Modify social sharing an e-mail text for alternate versions

--- a/kupon/index.html
+++ b/kupon/index.html
@@ -13,21 +13,6 @@
   <meta property="og:image" content="http://lockville.hu/1024/ogimg.jpg" />
   <meta property="og:description" content="Juss el 1024-ig és jutalmad egy Lockville ajándék kupon!" />
   <link href="style/styles.css" rel="stylesheet" type="text/css">
-  <!-- LESS stylesheet 
-  <link href="style/custom.less" rel="stylesheet/less" type="text/css">
-  <script>
-  less = {
-    env: "development",
-    async: false,
-    fileAsync: false,
-    poll: 1000,
-    functions: {},
-    dumpLineNumbers: "comments",
-    relativeUrls: false,
-    rootpath: ""
-  };
-</script>
-<script src="js/less.js"></script> -->
 </head>
 <body>
   <div class="container">
@@ -35,7 +20,7 @@
       <h1 class="title">Lockville <small>1024</small></h1>
       <p class="game-intro">
         Add össze a számokat, hogy eljuss <br class="visible-xs"/><strong>1024-ig!</strong><br/>
-        Ha sikerül, egy <strong>ingyenes</strong> Lockville ajándék kupon a jutalmad!
+        Ha sikerül, egy Lockville ajándék kupon a jutalmad, ezzel <strong>féláron</strong> játszhatsz a barátaiddal!
       </p>
       <div class="scores-container">
         <div class="score-container">0</div>
@@ -50,7 +35,7 @@
         <div><a class="pure-button dropdown">Meséld el barátaidnak!</a></div>
         <div class="hack">
           <div class="winsocial">
-            <div class="fb-share-button" data-href="https://lockville.hu/1024" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://lockville.hu/1024" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024"></div>
+            <div class="fb-share-button" data-href="https://lockville.hu/1024/kupon/iwin.html" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-text="Én már nyertem, próbáld ki te is!" data-url="http://lockville.hu/1024/kupon/iwin.html" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024/kupon/iwin.html"></div>
           </div>
           <div class="lower">
             <a class="keep-playing-button pure-button pure-button-primary">Játssz tovább</a>
@@ -97,7 +82,7 @@
     <hr>
     <div class="share">
     <p><strong class="important">Oszd meg barátaiddal!</strong></p>
-    <div class="fb-share-button" data-href="https://lockville.hu/1024" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://lockville.hu/1024" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024"></div>
+    <div class="fb-share-button" data-href="https://lockville.hu/1024/kupon" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-text="Nyerj Lockville kiszabadulós kalandjáték kupont!" data-url="http://lockville.hu/1024/kupon" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024/kupon"></div>
     </div>
 
     <hr>
