--- a/nyeremeny/success.html
+++ b/nyeremeny/success.html
@@ -13,21 +13,6 @@
   <meta property="og:image" content="http://lockville.hu/1024/1024.png" />
   <meta property="og:description" content="Játssz a Lockville játékával és nyerj Te is!" />
   <link href="style/styles.css" rel="stylesheet" type="text/css">
-  <!-- LESS stylesheet 
-  <link href="style/custom.less" rel="stylesheet/less" type="text/css">
-  <script>
-  less = {
-    env: "development",
-    async: false,
-    fileAsync: false,
-    poll: 1000,
-    functions: {},
-    dumpLineNumbers: "comments",
-    relativeUrls: false,
-    rootpath: ""
-  };
-</script>
-<script src="js/less.js"></script> -->
 </head>
 <body>
   <div class="container">
@@ -42,7 +27,7 @@
     <hr>
     <div class="share">
     <p><strong class="important">Oszd meg barátaiddal!</strong></p>
-    <div class="fb-share-button" data-href="https://lockville.hu/1024" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://lockville.hu/1024" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024"></div>
+    <div class="fb-share-button" data-href="https://lockville.hu/1024/nyeremeny/iwin.html" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-text="Én már nyertem, próbáld ki te is!" data-url="http://lockville.hu/1024/nyeremeny/iwin.html" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024/nyeremeny/iwin.html"></div>
     </div>
 
     <hr>
