Fixed fb share links

--- a/nyeremeny/index.html
+++ b/nyeremeny/index.html
@@ -35,7 +35,7 @@
         <div><a class="pure-button dropdown">Meséld el barátaidnak!</a></div>
         <div class="hack">
           <div class="winsocial">
-            <div class="fb-share-button" data-href="https://lockville.hu/1024/nyeremeny/iwin.html" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-text="Én már nyertem, próbáld ki te is!" data-url="http://lockville.hu/1024/nyeremeny/iwin.html" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024/nyeremeny/iwin.html"></div>
+            <div class="fb-share-button" data-href="http://lockville.hu/1024/nyeremeny/iwin.html" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-text="Én már nyertem, próbáld ki te is!" data-url="http://lockville.hu/1024/nyeremeny/iwin.html" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024/nyeremeny/iwin.html"></div>
           </div>
           <div class="lower">
             <a class="keep-playing-button pure-button pure-button-primary">Játssz tovább</a>
@@ -82,7 +82,7 @@
     <hr>
     <div class="share">
     <p><strong class="important">Oszd meg barátaiddal!</strong></p>
-    <div class="fb-share-button" data-href="https://lockville.hu/1024/nyeremeny" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-text="Nyerj Lockville kiszabadulós kalandjáték kupont!" data-url="http://lockville.hu/1024/nyeremeny" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024/nyeremeny"></div>
+    <div class="fb-share-button" data-href="http://lockville.hu/1024/nyeremeny" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-text="Nyerj Lockville kiszabadulós kalandjáték kupont!" data-url="http://lockville.hu/1024/nyeremeny" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024/nyeremeny"></div>
     </div>
 
     <hr>
