--- a/nyeremeny/success.html
+++ b/nyeremeny/success.html
@@ -27,7 +27,7 @@
     <hr>
     <div class="share">
     <p><strong class="important">Oszd meg barátaiddal!</strong></p>
-    <div class="fb-share-button" data-href="https://lockville.hu/1024/nyeremeny/iwin.html" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-text="Én már nyertem, próbáld ki te is!" data-url="http://lockville.hu/1024/nyeremeny/iwin.html" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024/nyeremeny/iwin.html"></div>
+    <div class="fb-share-button" data-href="http://lockville.hu/1024/nyeremeny/iwin.html" data-type="button"></div> <a href="https://twitter.com/share" class="twitter-share-button" data-text="Én már nyertem, próbáld ki te is!" data-url="http://lockville.hu/1024/nyeremeny/iwin.html" data-count="none">Tweet</a> <div class="g-plus" data-action="share" data-annotation="none" data-href="http://lockville.hu/1024/nyeremeny/iwin.html"></div>
     </div>
 
     <hr>
