--- a/nyeremeny/success.html
+++ b/nyeremeny/success.html
@@ -13,6 +13,7 @@
   <meta property="og:image" content="http://lockville.hu/1024/1024.png" />
   <meta property="og:description" content="Játssz a Lockville játékával és nyerj Te is!" />
   <link href="style/styles.css" rel="stylesheet" type="text/css">
+  <link href="../iframe.css" rel="stylesheet" type="text/css">
 </head>
 <body>
   <div class="container">
